# iced

./: CHANGELOG.md  Cargo.toml
.github/workflows/: document.yml  lint.yml  test.yml
accessibility/: Cargo.toml
core/: Cargo.toml
core/src/: clipboard.rs  element.rs  event.rs  image.rs  lib.rs  overlay.rs  rectangle.rs  renderer.rs  svg.rs  text.rs  widget.rs
core/src/overlay/: element.rs  group.rs
core/src/renderer/: null.rs
core/src/text/: paragraph.rs
core/src/theme/: palette.rs
core/src/widget/: operation.rs  text.rs  tree.rs
core/src/window/: id.rs
examples/component/: Cargo.toml
examples/game_of_life/: Cargo.toml
examples/integration/src/: controls.rs  main.rs
examples/modal/src/: main.rs
examples/multi_window/: Cargo.toml
examples/multi_window/src/: main.rs
examples/pokedex/: Cargo.toml
examples/scrollable/src/: main.rs
examples/sctk_drag/: Cargo.toml
examples/sctk_drag/src/: main.rs
examples/sctk_lazy/src/: main.rs
examples/sctk_session_lock/: Cargo.toml
examples/sctk_session_lock/src/: main.rs
examples/sctk_subsurface/: Cargo.toml
examples/sctk_subsurface/src/: main.rs
examples/sctk_todos/: Cargo.toml
examples/sctk_todos/src/: main.rs
examples/slider/: Cargo.toml
examples/system_information/: Cargo.toml
examples/toast/src/: main.rs
examples/todos/: Cargo.toml
examples/todos/src/: main.rs
examples/websocket/src/: main.rs
futures/: Cargo.toml
futures/src/: subscription.rs
graphics/src/: compositor.rs  image.rs  primitive.rs  renderer.rs  settings.rs  text.rs
graphics/src/geometry/: text.rs
graphics/src/text/: cache.rs  editor.rs  paragraph.rs
renderer/: Cargo.toml
renderer/src/: compositor.rs  fallback.rs  lib.rs
runtime/: Cargo.toml
runtime/src/: clipboard.rs  command.rs  dnd.rs  lib.rs  user_interface.rs  window.rs
runtime/src/command/: action.rs  mod.rs
runtime/src/multi_window/: state.rs
runtime/src/overlay/: nested.rs
runtime/src/program/: state.rs
runtime/src/window/: action.rs  screenshot.rs
sctk/: Cargo.toml
sctk/src/: application.rs  conversion.rs  sctk_event.rs  settings.rs  system.rs  widget.rs
sctk/src/clipboard/: clipboard.rs  mod.rs
sctk/src/commands/: activation.rs  data_device.rs  layer_surface.rs  popup.rs  session_lock.rs  window.rs
sctk/src/event_loop/: adapter.rs  mod.rs  state.rs
sctk/src/handlers/: compositor.rs
src/: application.rs  daemon.rs  lib.rs  multi_window.rs  program.rs  sandbox.rs  settings.rs
src/wayland/: application.rs  mod.rs  program.rs  sandbox.rs
style/src/: theme.rs  toggler.rs
style/src/theme/: palette.rs
tiny_skia/src/: backend.rs  engine.rs  geometry.rs  layer.rs  lib.rs  raster.rs  settings.rs  text.rs
tiny_skia/src/window/: compositor.rs
wgpu/: Cargo.toml
wgpu/src/: backend.rs  color.rs  image.rs  layer.rs  lib.rs  settings.rs  text.rs  triangle.rs  window.rs
wgpu/src/image/: mod.rs
wgpu/src/quad/: gradient.rs  solid.rs
wgpu/src/triangle/: msaa.rs
wgpu/src/window/: compositor.rs  wayland.rs  x11.rs
widget/: Cargo.toml
widget/src/: button.rs  canvas.rs  checkbox.rs  column.rs  container.rs  dnd_listener.rs  dnd_source.rs  helpers.rs  image.rs  lazy.rs  lib.rs  mouse_area.rs  pane_grid.rs  pick_list.rs  radio.rs  row.rs  rule.rs  scrollable.rs  shader.rs  slider.rs  stack.rs  svg.rs  text_editor.rs  text_input.rs  themer.rs  toggler.rs  tooltip.rs  vertical_slider.rs
widget/src/image/: viewer.rs
widget/src/keyed/: column.rs
widget/src/lazy/: component.rs  responsive.rs
widget/src/overlay/: menu.rs
widget/src/pane_grid/: content.rs  title_bar.rs
widget/src/text/: rich.rs
widget/src/text_input/: text_input.rs
winit/: Cargo.toml
winit/src/: application.rs  clipboard.rs  conversion.rs  lib.rs  multi_window.rs  program.rs  proxy.rs
winit/src/application/: drag_resize.rs
(+36 files in other folders)
