[package]
name = "iced_accessibility"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# TODO Ashley re-export more platform adapters
[features]
async-io = ["accesskit_unix?/async-io", "accesskit_winit?/async-io"]
tokio = ["accesskit_unix?/tokio", "accesskit_winit?/tokio"]

[dependencies]
accesskit = { git = "https://github.com/accesskit/accesskit" }
accesskit_unix = { git = "https://github.com/accesskit/accesskit", optional = true }
accesskit_windows = { git = "https://github.com/accesskit/accesskit", optional = true }
accesskit_macos = { git = "https://github.com/accesskit/accesskit", optional = true }
accesskit_winit = { git = "https://github.com/accesskit/accesskit", optional = true, default-features = false, features = [
    "rwh_06",
] }
